finish show detail

--- a/mbpg_cleanswift/Base.lproj/Main.storyboard
+++ b/mbpg_cleanswift/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -56,6 +57,14 @@
                                     <constraint firstAttribute="trailing" secondItem="tIY-MK-I5U" secondAttribute="trailing" id="q3C-Ik-XQY"/>
                                     <constraint firstItem="tIY-MK-I5U" firstAttribute="leading" secondItem="uwe-WF-8eI" secondAttribute="leading" id="yQt-Bc-Caa"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="textColor">
+                                        <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="selectedTextColor">
+                                        <color key="value" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -85,6 +94,80 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UbV-Fg-ggH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="557.60000000000002" y="124.58770614692655"/>
+        </scene>
+        <!--Mobile Detail View Controller-->
+        <scene sceneID="HZv-CA-bHO">
+            <objects>
+                <viewController storyboardIdentifier="MobileDetailViewController" id="Fhd-Tu-uM8" customClass="MobileDetailViewController" customModule="mbpgapp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xgJ-pj-fHM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3el-6D-7UJ" customClass="HorizontalScrollableImagesView" customModule="mbpgapp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="20" width="375" height="233.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XAB-1E-aAl" userLabel="Price and Rating View">
+                                <rect key="frame" x="0.0" y="20" width="375" height="29"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating: 4.9" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Mb-Vd-oKh">
+                                        <rect key="frame" x="8" y="4" width="83" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price: $149.99" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LSZ-TA-hAc">
+                                        <rect key="frame" x="255" y="4" width="112" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="LSZ-TA-hAc" firstAttribute="top" secondItem="XAB-1E-aAl" secondAttribute="top" constant="4" id="0Zm-bm-OBT"/>
+                                    <constraint firstAttribute="bottom" secondItem="LSZ-TA-hAc" secondAttribute="bottom" constant="4" id="5Bn-wH-hvJ"/>
+                                    <constraint firstItem="2Mb-Vd-oKh" firstAttribute="leading" secondItem="XAB-1E-aAl" secondAttribute="leading" constant="8" id="Aug-8h-Uuw"/>
+                                    <constraint firstAttribute="trailing" secondItem="LSZ-TA-hAc" secondAttribute="trailing" constant="8" id="Rtq-Hh-VeX"/>
+                                    <constraint firstAttribute="bottom" secondItem="2Mb-Vd-oKh" secondAttribute="bottom" constant="4" id="XFg-mk-YxI"/>
+                                    <constraint firstItem="LSZ-TA-hAc" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="2Mb-Vd-oKh" secondAttribute="trailing" constant="8" id="puz-xG-e3h"/>
+                                    <constraint firstItem="2Mb-Vd-oKh" firstAttribute="top" secondItem="XAB-1E-aAl" secondAttribute="top" constant="4" id="tgO-qm-HcK"/>
+                                </constraints>
+                            </view>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Lyu-TA-o5w">
+                                <rect key="frame" x="0.0" y="261.5" width="375" height="405.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Lyu-TA-o5w" firstAttribute="top" secondItem="3el-6D-7UJ" secondAttribute="bottom" constant="8" id="0cs-a8-Lot"/>
+                            <constraint firstItem="3el-6D-7UJ" firstAttribute="height" secondItem="xgJ-pj-fHM" secondAttribute="height" multiplier="0.35" id="44h-TV-kic"/>
+                            <constraint firstItem="Lyu-TA-o5w" firstAttribute="bottom" secondItem="JYl-2l-NTL" secondAttribute="bottom" id="AAR-hK-kNF"/>
+                            <constraint firstItem="3el-6D-7UJ" firstAttribute="trailing" secondItem="JYl-2l-NTL" secondAttribute="trailing" id="Lhj-Ej-VXu"/>
+                            <constraint firstItem="3el-6D-7UJ" firstAttribute="top" secondItem="JYl-2l-NTL" secondAttribute="top" id="QKx-OC-Som"/>
+                            <constraint firstItem="Lyu-TA-o5w" firstAttribute="trailing" secondItem="JYl-2l-NTL" secondAttribute="trailing" id="Tfp-1Q-YrK"/>
+                            <constraint firstItem="XAB-1E-aAl" firstAttribute="top" secondItem="3el-6D-7UJ" secondAttribute="top" id="agU-Te-DA9"/>
+                            <constraint firstItem="XAB-1E-aAl" firstAttribute="trailing" secondItem="3el-6D-7UJ" secondAttribute="trailing" id="pwa-QZ-lfC"/>
+                            <constraint firstItem="XAB-1E-aAl" firstAttribute="leading" secondItem="3el-6D-7UJ" secondAttribute="leading" id="rEF-LO-69L"/>
+                            <constraint firstItem="3el-6D-7UJ" firstAttribute="leading" secondItem="JYl-2l-NTL" secondAttribute="leading" id="rF1-4y-XDE"/>
+                            <constraint firstItem="Lyu-TA-o5w" firstAttribute="leading" secondItem="JYl-2l-NTL" secondAttribute="leading" id="zDb-gP-rSJ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="JYl-2l-NTL"/>
+                    </view>
+                    <connections>
+                        <outlet property="descriptionTextView" destination="Lyu-TA-o5w" id="sHP-P1-OWq"/>
+                        <outlet property="priceLabel" destination="LSZ-TA-hAc" id="myG-5n-05h"/>
+                        <outlet property="ratingLabel" destination="2Mb-Vd-oKh" id="Zle-XJ-5X5"/>
+                        <outlet property="scrollableImagesView" destination="3el-6D-7UJ" id="6EW-Dm-TKe"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="end-Rx-svQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1482" y="125"/>
         </scene>
     </scenes>
 </document>
