finish favourite feature

--- a/mbpg_cleanswift/Base.lproj/Main.storyboard
+++ b/mbpg_cleanswift/Base.lproj/Main.storyboard
@@ -65,6 +65,9 @@
                                         <color key="value" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="segmentChanged" destination="da0-4K-NWd" eventType="valueChanged" id="OCt-69-3Tw"/>
+                                </connections>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
